--- a/src/Services/Domains/AVS.Banda.Domain/AVS.Banda.Domain.csproj
+++ b/src/Services/Domains/AVS.Banda.Domain/AVS.Banda.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Core\AVS.Core\AVS.Core.csproj" />
   </ItemGroup>
 
