feat[spotifyclone::cadastro]: contexto cadastro - Implementação de teste de unidade usuario service com TDD.

--- a/src/Services/Domains/AVS.Cadastro.Domain/AVS.Cadastro.Domain.csproj
+++ b/src/Services/Domains/AVS.Cadastro.Domain/AVS.Cadastro.Domain.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Core\AVS.Core\AVS.Core.csproj" />
+    <ProjectReference Include="..\AVS.Banda.Domain\AVS.Banda.Domain.csproj" />
   </ItemGroup>
 
 </Project>
