feat[spotifyclone::cadastro]: contexto cadastro - Implementação de teste de unidade usuario appservice com TDD.

--- a/src/Services/Applications/AVS.Cadastro.Application/AVS.Cadastro.Application.csproj
+++ b/src/Services/Applications/AVS.Cadastro.Application/AVS.Cadastro.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\AVS.Core\AVS.Core.csproj" />
+    <ProjectReference Include="..\..\Domains\AVS.Cadastro.Domain\AVS.Cadastro.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
