feat[spotifyclone::cadastro]: contexto cadastro e banda. - TDD endpoints usuarios e  playlist; - Remodelagem da arquitetura; - Implementação servico e repositorio genéricos.

--- a/src/Services/Domains/AVS.Banda.Domain/AVS.Banda.Domain.csproj
+++ b/src/Services/Domains/AVS.Banda.Domain/AVS.Banda.Domain.csproj
@@ -14,4 +14,9 @@
     <ProjectReference Include="..\..\..\Core\AVS.Core\AVS.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
