--- a/src/Documentacao/AVS.Documentacao.API/AVS.Documentacao.API.csproj
+++ b/src/Documentacao/AVS.Documentacao.API/AVS.Documentacao.API.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Services\Applications\AVS.Cadastro.Application\AVS.Cadastro.Application.csproj" />
+    <ProjectReference Include="..\..\Services\Infra\Data\AVS.Banda.Data\AVS.Banda.Data.csproj" />
     <ProjectReference Include="..\..\Services\Infra\Data\AVS.Cadastro.Data\AVS.Cadastro.Data.csproj" />
   </ItemGroup>
 
