--- a/src/Services/Infra/Data/AVS.Cadastro.Data/AVS.Cadastro.Data.csproj
+++ b/src/Services/Infra/Data/AVS.Cadastro.Data/AVS.Cadastro.Data.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Domains\AVS.Cadastro.Domain\AVS.Cadastro.Domain.csproj" />
+    <ProjectReference Include="..\..\CrossCutting\AVS.Infra.CrossCutting\AVS.Infra.CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
