--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,21 @@ dotnet_diagnostic.CS8618.severity = none
 
 # CS8603: Possível retorno de referência nula.
 dotnet_diagnostic.CS8603.severity = silent
+
+# CS8604: Possível argumento de referência nula.
+dotnet_diagnostic.CS8604.severity = none
+
+# CS8625: Não é possível converter um literal nulo em um tipo de referência não anulável.
+dotnet_diagnostic.CS8625.severity = none
+
+# CS0108: O membro oculta o membro herdado; nova palavra-chave ausente
+dotnet_diagnostic.CS0108.severity = none
+
+# IDE0055: Corrigir a formatação
+dotnet_diagnostic.IDE0055.severity = none
+
+# CS8602: Desreferência de uma referência possivelmente nula.
+dotnet_diagnostic.CS8602.severity = none
+
+# CS8601: Possível atribuição de referência nula.
+dotnet_diagnostic.CS8601.severity = none
