--- a/src/Core/AVS.Core/AVS.Core.csproj
+++ b/src/Core/AVS.Core/AVS.Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
 	  <PackageReference Include="MediatR" Version="10.0.1" />
 	  <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
 		  <PrivateAssets>all</PrivateAssets>
