feature[spotifyclone::blob]: azure blob storage

--- a/src/Services/Applications/AVS.Banda.Application/AVS.Banda.Application.csproj
+++ b/src/Services/Applications/AVS.Banda.Application/AVS.Banda.Application.csproj
@@ -9,10 +9,12 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Domains\AVS.Banda.Domain\AVS.Banda.Domain.csproj" />
+    <ProjectReference Include="..\..\Infra\CrossCutting\AVS.Infra.CrossCutting\AVS.Infra.CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
