--- a/src/Services/Infra/CrossCutting/AVS.Infra.CrossCutting/AVS.Infra.CrossCutting.csproj
+++ b/src/Services/Infra/CrossCutting/AVS.Infra.CrossCutting/AVS.Infra.CrossCutting.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.13.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
 			<PrivateAssets>all</PrivateAssets>
