--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,17 +37,18 @@ steps:
     projectKey: 'alexandersilva_SpotifyClone'
     projectName: 'SpotifyClone'
 
-- task: VSBuild@1
+- task: DotNetCoreCLI@2
   inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    command: 'build'
+    projects: '**/AVS.Documentacao.API/*.csproj'
+    arguments: '--configuration $(BuildConfiguration)'
 
-- task: VSTest@2
+- task: DotNetCoreCLI@2
   inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    command: 'test'
+    projects: '**/AVS.Cadastro.Domain.Testes/*.csproj'
+    arguments: '--configuration $(BuildConfiguration)'
+    publishTestResults: false
 
 - task: SonarCloudAnalyze@1
   displayName: 'Run SonarCloud analysis'
