--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ steps:
 - task: SonarCloudAnalyze@1
   displayName: 'Run SonarCloud analysis'
   inputs:
-    jdkversion: 'JAVA_HOME'
+    jdkversion: 'JAVA_HOME_11_X64'
 
 - task: SonarCloudPublish@1
   displayName: 'Publish results on build summary'
