--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,11 +33,11 @@ steps:
   inputs:
     SonarCloud: 'Sonarcloude Service'
     organization: 'treinamento-key'
-    scannerMode: 'MSBuild'
-    projectKey: 'alexandersilva_SpotifyClone'
-    projectName: 'SpotifyClone'
-
-
+    scannerMode: 'CLI'
+    configMode: 'manual'
+    cliProjectKey: 'alexandersilva_SpotifyClone'
+    cliProjectName: 'SpotifyClone'
+    cliSources: '.'
 
 - task: DotNetCoreCLI@2
   inputs:
@@ -56,15 +56,7 @@ steps:
   displayName: 'Run SonarCloud analysis'
   inputs:
     jdkversion: 'JAVA_HOME_11_X64'
-- task: SonarCloudPrepare@1
-  inputs:
-    SonarCloud: 'Sonarcloude Service'
-    organization: 'treinamento-key'
-    scannerMode: 'CLI'
-    configMode: 'manual'
-    cliProjectKey: 'alexandersilva_SpotifyClone'
-    cliProjectName: 'SpotifyClone'
-    cliSources: '.'- task: SonarCloudPublish@1
+- task: SonarCloudPublish@1
   displayName: 'Publish results on build summary'
   inputs:
     pollingTimeoutSec: '300'
