feat[spotifyclone::docker]: teste docker-compose

--- a/src/Documentacao/AVS.Documentacao.API/Dockerfile
+++ b/src/Documentacao/AVS.Documentacao.API/Dockerfile
@@ -7,19 +7,19 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["src/Documentacao/AVS.Documentacao.API/AVS.Documentacao.API.csproj", "src/Documentacao/AVS.Documentacao.API/"]
-COPY ["src/Services/Infra/Data/AVS.Cadastro.Data/AVS.Cadastro.Data.csproj", "src/Services/Infra/Data/AVS.Cadastro.Data/"]
-COPY ["src/Services/Domains/AVS.Cadastro.Domain/AVS.Cadastro.Domain.csproj", "src/Services/Domains/AVS.Cadastro.Domain/"]
-COPY ["src/Core/AVS.Core/AVS.Core.csproj", "src/Core/AVS.Core/"]
-COPY ["src/Services/Domains/AVS.Banda.Domain/AVS.Banda.Domain.csproj", "src/Services/Domains/AVS.Banda.Domain/"]
-COPY ["src/Services/Infra/CrossCutting/AVS.Infra.CrossCutting/AVS.Infra.CrossCutting.csproj", "src/Services/Infra/CrossCutting/AVS.Infra.CrossCutting/"]
-COPY ["src/Services/Infra/Data/AVS.Infra.Data/AVS.Infra.Data.csproj", "src/Services/Infra/Data/AVS.Infra.Data/"]
-COPY ["src/Services/Applications/AVS.Cadastro.Application/AVS.Cadastro.Application.csproj", "src/Services/Applications/AVS.Cadastro.Application/"]
-COPY ["src/Services/Applications/AVS.Banda.Application/AVS.Banda.Application.csproj", "src/Services/Applications/AVS.Banda.Application/"]
-COPY ["src/Services/Infra/Data/AVS.Banda.Data/AVS.Banda.Data.csproj", "src/Services/Infra/Data/AVS.Banda.Data/"]
+COPY ["./Documentacao/AVS.Documentacao.API/AVS.Documentacao.API.csproj", "src/Documentacao/AVS.Documentacao.API/"]
+COPY ["./Services/Infra/Data/AVS.Cadastro.Data/AVS.Cadastro.Data.csproj", "src/Services/Infra/Data/AVS.Cadastro.Data/"]
+COPY ["./Services/Domains/AVS.Cadastro.Domain/AVS.Cadastro.Domain.csproj", "src/Services/Domains/AVS.Cadastro.Domain/"]
+COPY ["./Core/AVS.Core/AVS.Core.csproj", "src/Core/AVS.Core/"]
+COPY ["./Services/Domains/AVS.Banda.Domain/AVS.Banda.Domain.csproj", "src/Services/Domains/AVS.Banda.Domain/"]
+COPY ["./Services/Infra/CrossCutting/AVS.Infra.CrossCutting/AVS.Infra.CrossCutting.csproj", "src/Services/Infra/CrossCutting/AVS.Infra.CrossCutting/"]
+COPY ["./Services/Infra/Data/AVS.Infra.Data/AVS.Infra.Data.csproj", "src/Services/Infra/Data/AVS.Infra.Data/"]
+COPY ["./Services/Applications/AVS.Cadastro.Application/AVS.Cadastro.Application.csproj", "src/Services/Applications/AVS.Cadastro.Application/"]
+COPY ["./Services/Applications/AVS.Banda.Application/AVS.Banda.Application.csproj", "src/Services/Applications/AVS.Banda.Application/"]
+COPY ["./Services/Infra/Data/AVS.Banda.Data/AVS.Banda.Data.csproj", "src/Services/Infra/Data/AVS.Banda.Data/"]
 RUN dotnet restore "src/Documentacao/AVS.Documentacao.API/AVS.Documentacao.API.csproj"
 COPY . .
-WORKDIR "/src/src/Documentacao/AVS.Documentacao.API"
+WORKDIR "Documentacao/AVS.Documentacao.API"
 RUN dotnet build "AVS.Documentacao.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
