feat[spotifyclone::docker]: teste azure pipeline

--- a/src/Documentacao/AVS.Documentacao.API/AVS.Documentacao.API.csproj
+++ b/src/Documentacao/AVS.Documentacao.API/AVS.Documentacao.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>3d8703b2-ca63-4c62-ad1a-195f04257547</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <ApplicationInsightsResourceId>/subscriptions/8d360ed5-d3b1-4c6b-a9d6-49f3d801502f/resourceGroups/rg-backend/providers/microsoft.insights/components/spotifyclone-insights</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,7 @@
     <PackageReference Include="AspNetCore.HealthChecks.UI.Core" Version="6.0.2" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="6.0.2" />
     <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="6.0.2" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
