--- a/src/Documentacao/AVS.Documentacao.API/Properties/launchSettings.json
+++ b/src/Documentacao/AVS.Documentacao.API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:7144;http://localhost:5144",
       "dotnetRunMessages": true
