--- a/.github/workflows/spotifyclone-sonarcloud.yml
+++ b/.github/workflows/spotifyclone-sonarcloud.yml
@@ -39,13 +39,12 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-      - name: Build and analyze
-        working-directory: src/Documentacao/AVS.Documentacao.API
+      - name: Build and analyze        
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"AlexanderVieira_SpotifyClone.CI.GithubAction" /o:"alexandervieira" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="**/*.opencover.xml" /d:sonar.host.url="https://sonarcloud.io"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"AlexanderVieira_SpotifyClone.CI.GithubAction" /o:"alexandervieira" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="**/*.cobertura.xml" /d:sonar.host.url="https://sonarcloud.io"
           dotnet test --collect:"XPlat Code Coverage;Format=opencover"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
