--- a/.github/workflows/spotifyclone-sonarcloud.yml
+++ b/.github/workflows/spotifyclone-sonarcloud.yml
@@ -46,5 +46,5 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"AlexanderVieira_SpotifyClone.CI.GithubAction" /o:"alexandervieira" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="**/*.cobertura.xml" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet test src\Documentacao\AVS.Documentacao.API\AVS.Documentacao.API.csproj --collect:"XPlat Code Coverage;Format=opencover"
+          dotnet test ./SpotifyClone.sln --collect:"XPlat Code Coverage;Format=opencover"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
