--- a/.github/workflows/spotifyclone-sonarcloud.yml
+++ b/.github/workflows/spotifyclone-sonarcloud.yml
@@ -45,6 +45,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"AlexanderVieira_SpotifyClone.CI.GithubAction" /o:"alexandervieira" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="**/*.cobertura.xml" /d:sonar.host.url="https://sonarcloud.io"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"AlexanderVieira_SpotifyClone.CI.GithubAction" /o:"alexandervieira" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.exclusions="**/Migrations/**"
+           /d:sonar.exclusions="**/Testes/**" /d:sonar.cs.opencover.reportsPaths="**/*.cobertura.xml" /d:sonar.host.url="https://sonarcloud.io"
           dotnet test ./SpotifyClone.sln --collect:"XPlat Code Coverage;Format=opencover"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
