--- a/.github/workflows/spotifyclone-sonarcloud.yml
+++ b/.github/workflows/spotifyclone-sonarcloud.yml
@@ -46,6 +46,6 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"AlexanderVieira_SpotifyClone.CI.GithubAction" /o:"alexandervieira" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.exclusions="**/Migrations/**"
-           /d:sonar.exclusions="/Reports/**" /d:sonar.cs.opencover.reportsPaths="**/*.cobertura.xml" /d:sonar.host.url="https://sonarcloud.io"
+           /d:sonar.exclusions="**/Reports/**" /d:sonar.cs.opencover.reportsPaths="**/*.cobertura.xml" /d:sonar.host.url="https://sonarcloud.io"
           dotnet test ./SpotifyClone.sln --collect:"XPlat Code Coverage;Format=opencover"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
