--- a/.github/workflows/spotifyclone-sonarcloud.yml
+++ b/.github/workflows/spotifyclone-sonarcloud.yml
@@ -45,6 +45,6 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"AlexanderVieira_SpotifyClone.CI.GithubAction" /o:"alexandervieira" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.exclusions="Testes/Cadastro/AVS.Cadastro.Domain.Testes/Reports/**" /d:sonar.exclusions="**/Migrations/**" /d:sonar.cs.opencover.reportsPaths="**/*.opencover.xml" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet test src/Documentacao/AVS.Documentacao.API/AVS.Documentacao.API.csproj --collect:"XPlat Code Coverage;Format=opencover"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"AlexanderVieira_SpotifyClone.CI.GithubAction" /o:"alexandervieira" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.exclusions="Testes/**" /d:sonar.exclusions="**/Migrations/**" /d:sonar.cs.opencover.reportsPaths="**/*.opencover.xml" /d:sonar.host.url="https://sonarcloud.io"
+          dotnet test Testes/Cadastro/AVS.Cadastro.Domain.Testes/AVS.Cadastro.Domain.Testes.csproj --collect:"XPlat Code Coverage;Format=opencover"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
